<resources>
    <string name="app_name">Verify your phone number</string>
    <string name="action_settings">Settings</string>
    <string name="message">Kindly enter your phone number with country code. For ex, if your number is 6312128232 and country code is +91, you should enter +916312128232</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="start_phone_auth">Start Verification</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="enter_verify_code">Enter OTP Code</string>
    <string name="success_message">Correct OTP. Login successful</string>
</resources>